fix: header aligné

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ header {
     justify-content: space-between;
     align-items: center;
     height: 90px;
-    margin: 0 11% 0 12%;
+    margin: 0 6% 0 7%;
 }
 
 h1 {
